# ruFSM

./: .gitattributes  .gitignore  Cargo.toml  README.md  SW_Design.md
.github/workflows/: rust-clippy.yml
.run/: Execute test_simple.scxml.run.xml
doc/W3C_SCXML_2024_07_13/: README.TXT  index.html
examples/: BasicHTTPIOProcessor.scxml  CustomActions.rs  CustomActions.scxml  Endless.scxml
schema/: scxml.xsd  test_specification_schema.json
src/: actions.rs  basic_http_event_io_processor.rs  common.rs  datamodel.rs  ecma_script_datamodel.rs  emca_script_datamodel.rs  event_io_processor.rs  executable_content.rs  fsm.rs  fsm_executor.rs  lib.rs  main.rs  model.rs  reader.rs  remote_tracer.rs  scxml_event_io_processor.rs  scxml_reader.rs  test.rs  test_tracer.rs  tests.rs  tracer.rs
src/datamodel/: ecma_script.rs  expression_engine.rs  mod.rs
src/event_io_processor/: THRIFT_README.MD  http_event_io_processor.rs  mod.rs  mqtt_event_io_processor.rs  scxml_event_io_processor.rs
src/event_io_processor/thrift/: mod.rs  rufsm.rs  thrift_event_io_processor.rs
src/expression_engine/: README.md  datamodel.rs  expressions.rs  lexer.rs  mod.rs  parser.rs
src/serializer/: default_protocol_definitions.rs  default_protocol_reader.rs  default_protocol_writer.rs  fsm_reader.rs  fsm_writer.rs  mod.rs  protocol_reader.rs  protocol_writer.rs
src/tests/: test_list.rs  test_ordered_set.rs  test_reader.rs
src/tracer/: mod.rs  mqtt_trace_server.rs  thrift_trace_server.rs
test/: include.scxml  simple.rfsm  simple.scxml  test_default_initial.scxml
test/w3c/: README.md  REPORT.MD  confRExp.xsl  download_and_transform_tests.sh  execute_all_rfsm.sh  execute_all_rfsm_expression.sh  execute_tests.sh  test_config.json  test_debug_config.json  tests_to_rfsm.sh  transform_tests_to_rfsm_expression.sh
thriftserver/: build.gradle  rufsm.thrift  settings.gradle
thriftserver/src/main/java/com/bw/ruFSM/thrift/: RuFsmHandler.java  ThriftClient.java  ThriftServer.java  rufsm.java
xml/: README.md  scxml-module-core.xsd  scxml.xsd
xml/example/: ForEach.scxml  Invoke.scxml  Main.scxml  Test.scxml  Test2Sub1.xml  TestScript.scxml  fsmToInvoke.scxml  script.js  test.json  test_form.html
