[package]
name = "rfsm"
version = "0.1.0"
edition = "2021"
default-run = "fsm"

[[bin]]
name = "fsm"

[[bin]]
name = "test"

[[bin]]
name = "scxml_to_fsm"
required-features = ["xml", "serializer"]

[lib]
name = "rfsm"
path = "src/lib.rs"

[features]
default = [ "BasicHttpEventIOProcessor", "ECMAScript", "EnvLog", "yaml-config", "json-config", "xml", "serializer", "Trace_State", "Debug_Serializer" ]
ECMAScript = ["boa_engine", "boa_gc"]
EnvLog = ["env_logger"]
BasicHttpEventIOProcessor = ["hyper", "http-body-util", "hyper-util", "form_urlencoded"]
yaml-config = ["yaml-rust"]
json-config = ["serde", "serde_json", "serde/serde_derive"]
Trace_Method = [ "Trace" ]
Trace_State = [ "Trace"  ]
Trace_Event = [ "Trace"  ]
serializer = []
# "Trace" combines the other trace features
Trace = []
# Enables debug output from scxml-reader
Debug_Reader = []
Debug_Serializer = []
xml = ["quick-xml", "reqwest"]

[dependencies]
log = "0.4"
timer = "0.2"
chrono = "0.4"
regex = "1.10"
lazy_static = "1.4"
quick-xml = { version = "0.36", features = ["serialize"],  optional = true }
boa_engine = { version = "0.19", optional = true }
boa_gc = { version = "0.19", optional = true }
env_logger = { version = "0.11", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"],  optional = true }
hyper = { version = "1.4", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
tokio = { version = "1.38", features = ["rt","macros", "rt-multi-thread" ] }
form_urlencoded = { version = "1.2", optional = true }
serde_json = { version = "1.0.117", optional = true }
yaml-rust = { version = "0.4.5", optional = true }
serde = { version = "1.0", optional = true }
byteorder = "1.5.0"

[profile.dev.package."*"]
opt-level = "z"