[package]
name = "rfsm"
version = "0.1.0"
edition = "2021"
default-run = "fsm"

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[[bin]]
name = "fsm"
required-features = ["RfsmExpressionModel", "ECMAScript", "xml"]

[[bin]]
name = "test"
path = "src/bin/test.rs"
required-features = ["ECMAScript", "RfsmExpressionModel", "xml", "Debug", "EnvLog" ]

[[bin]]
name = "scxml_to_fsm"
required-features = ["xml", "serializer" ]

[lib]
name = "rfsm"
path = "src/lib.rs"

[features]
default = [ "json-config", "ECMAScript", "RfsmExpressionModel", "Debug", "xml", "EnvLog"  ]
ECMAScript = ["boa_engine", "boa_gc"]
RfsmExpressionModel = []
BasicHttpEventIOProcessor = ["hyper", "http-body-util", "hyper-util", "form_urlencoded"]
yaml-config = ["yaml-rust"]
json-config = ["serde", "serde_json", "serde/serde_derive"]
serializer = []
xml = ["quick-xml", "reqwest"]

# "Trace" enables the trace module, uses by the other trace features
Trace = []

# "TraceServer" enables the remote trace-server
TraceServer = ["Trace"]

# Enables debug output from scxml-reader
Debug_Reader = []
Debug_Serializer = []
EnvLog = ["env_logger"]
Trace_Method = [ "Trace" ]
Trace_State = [ "Trace"  ]
Trace_Event = [ "Trace"  ]
Debug = [ "Trace_Event", "Trace_State", "Trace_Method" ]

[dependencies]
log = "0.4"
timer = "0.2"
chrono = "0.4"
lazy_static = "1.4"
quick-xml = { version = "0.36", features = ["serialize"],  optional = true }
boa_engine = { version = "0.19", optional = true }
boa_gc = { version = "0.19", optional = true }
env_logger = { version = "0.11", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"],  optional = true }
hyper = { version = "1.4", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
tokio = { version = "1.38", features = ["rt","macros", "rt-multi-thread" ] }
form_urlencoded = { version = "1.2", optional = true }
serde_json = { version = "1.0.117", optional = true }
yaml-rust = { version = "0.4.5", optional = true }
serde = { version = "1.0", optional = true }
byteorder = "1.5.0"

[[example]]
required-features = [ "EnvLog", "ECMAScript", "xml", "serializer" ]
name = "CustomActions"
path = "examples/CustomActions.rs"
