[package]
name = "ruFsm"
version = "1.0.0-alpha"
description = "A SCXML (Harel Statecharts) Implememtation"
license = "Unlicense"
authors = ["Bernd Wengenroth"]
keywords = ["Harel", "statechart", "SCXML", "statemachine" ]
readme = "README.md"
repository = "https://github.com/BWeng20/ruFSM"
publish = true
edition = "2021"
default-run = "fsm"
exclude = ["/examples", "/schema", ".*", "/doc", "/test", "!/test/w3c/README.md", "!/test/w3c/REPORT.MD"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[[bin]]
name = "eval"
path = "src/bin/eval_expression.rs"
required-features = [ "ExpressionEngine" ]

[[bin]]
name = "fsm"

[[bin]]
name = "test"
path = "src/bin/test.rs"
required-features = [ ]

[[bin]]
name = "scxml_to_fsm"
required-features = ["xml", "serializer" ]

[lib]
name = "rufsm"
path = "src/lib.rs"

[features]
default = [ "RfsmExpressionModel", "xml", "json-config", "Debug", "Trace_State", "Trace_Method", "Trace_Event", "ECMAScriptModel"]
ThriftIOProcessor = ["thrift"]
ECMAScriptModel = ["boa_engine", "boa_gc"]
RfsmExpressionModel = ["ExpressionEngine"]
BasicHttpEventIOProcessor = ["ureq", "rocket"]
yaml-config = ["yaml-rust"]
json-config = ["serde", "serde_json", "serde/serde_derive"]
serializer = []
xml = ["quick-xml", "ureq", "url" ]

# Enables the expression engine runtime
ExpressionEngine = []

# "Trace" enables the trace module, uses by the other trace features
Trace = []

# Enables debug output from scxml-reader
Debug_Reader = []
Debug_Serializer = []
EnvLog = ["env_logger"]
Trace_Method = [ "Trace" ]
Trace_State = [ "Trace"  ]
Trace_Event = [ "Trace"  ]
Debug = [ "Trace_Event", "Trace_State", "Trace_Method" ]

ThriftTrace = [ "Trace", "thrift" ]

[dependencies]
thrift = { version="0.17.0", optional = true }
rocket = {  version="0.5", default-features=false, features = [], optional = true }
log = "0.4"
timer = "0.2"
chrono = "0.4"
lazy_static = "1.4"
quick-xml = { version = "0.36", features = ["serialize"],  optional = true }
boa_engine = { version = "0.20", optional = true }
boa_gc = { version = "0.20", optional = true }
env_logger = { version = "0.11", optional = true }
ureq = { version = "2.12", optional = true }
url =  { version = "2.5", optional = true }
tokio = { version = "1.38", features = ["rt","macros", "rt-multi-thread" ] }
serde_json = { version = "1.0.117", optional = true }
yaml-rust = { version = "0.4.5", optional = true }
serde = { version = "1.0", optional = true }
byteorder = "1.5.0"

[[example]]
required-features = [ "EnvLog", "ECMAScriptModel", "xml", "serializer" ]
name = "CustomActions"
path = "examples/CustomActions.rs"
